--- a/app/src/main/res/layout/activity_common_tab.xml
+++ b/app/src/main/res/layout/activity_common_tab.xml
@@ -118,7 +118,7 @@
 
         <com.flyco.tablayout.CommonTabLayout
             android:id="@+id/tl_8"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:background="#6D8FB0"
             android:paddingLeft="5dp"
